objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Advisor Candidate - M%26A</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Deal Registration Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS - CB Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing - Contacted</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS - WM Lead Process - General</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing - Contacted</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS_Wealth Prospect Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing - Contacted</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Lead Process</fullName>
        <description>Consumer lead</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing - Contacted</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Mortgage Borrower</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Recruitment</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Broker_ID__c</fullName>
        <label>Broker ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Net_Worth__c</fullName>
        <label>Company Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConvertedDate__c</fullName>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_Explanation__c</fullName>
        <label>Discovery Explanation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Discovery_Outcome__c</fullName>
        <label>Discovery Outcome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Prescription__c</fullName>
        <label>Discovery Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Engagement_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Interaction</label>
        <referenceTo>EngagementInteraction</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Average_Client_Age__c</fullName>
        <label>Average Client Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Broker_ID__c</fullName>
        <label>Broker ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CRD__c</fullName>
        <label>CRD #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Commercial_Decision_Timeframe__c</fullName>
        <label>Decision Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>Next Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Commission_Split__c</fullName>
        <label>% Commission Split</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Company_Net_Worth__c</fullName>
        <label>Company Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Corporation__c</fullName>
        <label>Corporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C- Corporation</fullName>
                </value>
                <value>
                    <fullName>S - Corporation</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Custodian__c</fullName>
        <label>Custodian</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fidelity</fullName>
                </value>
                <value>
                    <fullName>Schwab</fullName>
                </value>
                <value>
                    <fullName>Pershing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CustomL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Custom Predictive Factors?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Funded_Volume__c</fullName>
        <label>Funded Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Indicator_1_Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Indicator 1 Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Indicator_1_Strength__c</fullName>
        <label>Einstein - Indicator 1 Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Indicator_2_Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Indicator 2 Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Indicator_2_Strength__c</fullName>
        <label>Einstein - Indicator 2 Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Indicator_3_Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Indicator 3 Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Indicator_3_Strength__c</fullName>
        <label>Einstein - Indicator 3 Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Lending_Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Bank_Response__c</fullName>
        <label>Bank Response</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Expected_Monthly_Payment__c</fullName>
        <label>Expected Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Loan_Product_Type__c</fullName>
        <label>Loan Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30-Year Fixed-Rate</fullName>
                </value>
                <value>
                    <fullName>30-Year Fixed-Rate Jumbo</fullName>
                </value>
                <value>
                    <fullName>30-Year Fixed-Rate VA</fullName>
                </value>
                <value>
                    <fullName>15-Year Fixed-Rate Jumbo</fullName>
                </value>
                <value>
                    <fullName>7/1 ARM</fullName>
                </value>
                <value>
                    <fullName>7/1 ARM Jumbo</fullName>
                </value>
                <value>
                    <fullName>5/1 ARM</fullName>
                </value>
                <value>
                    <fullName>10/1 ARM Jumbo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Lending_Loan_Purpose__c</fullName>
        <label>Loan Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Lending_Loan_Reference_ID__c</fullName>
        <label>Loan Reference ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Loan_Term__c</fullName>
        <inlineHelpText>in years</inlineHelpText>
        <label>Loan Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Loan_Type__c</fullName>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Residency Home</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Townhome</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Lending_Requested_Funding_Amount__c</fullName>
        <label>Requested Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Mortgage_Business_Name__c</fullName>
        <label>Mortgage Business Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Owner_s__c</fullName>
        <label>Owner(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Ownership_Percentage__c</fullName>
        <label>Ownership Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Quest_Liquid_Assets__c</fullName>
        <inlineHelpText>For Questionnaire (Omniscript) completed by wealth prospect on experience cloud</inlineHelpText>
        <label>Liquid Assets</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Quest_Private_Investments__c</fullName>
        <inlineHelpText>For Questionnaire (Omniscript) completed by wealth prospect on experience cloud</inlineHelpText>
        <label>Private Investments</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Quest_Real_Estate__c</fullName>
        <inlineHelpText>For Questionnaire (Omniscript) completed by wealth prospect on experience cloud</inlineHelpText>
        <label>Real Estate</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Quest_Retirement__c</fullName>
        <inlineHelpText>For Questionnaire (Omniscript) completed by wealth prospect on experience cloud</inlineHelpText>
        <label>Retirement</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (related Contact)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Spouse_First_Name__c</fullName>
        <label>Spouse First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Spouse_Last_Name__c</fullName>
        <label>Spouse Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_States_Licensed_in__c</fullName>
        <label>States Licensed in</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Tax_ID_Number__c</fullName>
        <label>Tax ID Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Tech_Stack__c</fullName>
        <label>Tech Stack</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Redtail</fullName>
                </value>
                <value>
                    <fullName>Orion</fullName>
                </value>
                <value>
                    <fullName>Moneyguide Pro</fullName>
                </value>
                <value>
                    <fullName>Addepar</fullName>
                </value>
                <value>
                    <fullName>Emoney</fullName>
                </value>
                <value>
                    <fullName>Black Diamond</fullName>
                </value>
                <value>
                    <fullName>Tamarac</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Top_Predictive_1__c</fullName>
        <label>Einstein - Top Predictive 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Top_Predictive_2__c</fullName>
        <label>Einstein - Top Predictive 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Top_Predictive_3__c</fullName>
        <label>Einstein - Top Predictive 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Top_Predictive_Result_1__c</fullName>
        <label>Einstein - Top Predictive Result 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Top_Predictive_Result_2__c</fullName>
        <label>Einstein - Top Predictive Result 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Top_Predictive_Result_3__c</fullName>
        <label>Einstein - Top Predictive Result 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Total_AUM__c</fullName>
        <label>Total AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Type_of_Loan__c</fullName>
        <label>Type of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>CONV Non-Conforming</fullName>
                </value>
                <value>
                    <fullName>FHA</fullName>
                </value>
                <value>
                    <fullName>USDA</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_escore__c</fullName>
        <label>Einstein - Lead Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>92</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_of_Households__c</fullName>
        <label># of Households</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_of_Loans__c</fullName>
        <label># of Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__ConversionDateTime__c</fullName>
        <formula>NOW()</formula>
        <label>Conversion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedByMe__c</fullName>
        <formula>IF(  FinServ__ReferredByUser__c = $User.Id,True,False)</formula>
        <label>Created By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedFromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ExpressedInterest__c</fullName>
        <label>Expressed Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__ProductList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this Referral rolls up to.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Referrals</relationshipLabel>
        <relationshipName>HouseholdReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__PotentialValue__c</fullName>
        <label>Potential Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Referrals</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>LeadUserReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <description>Referrer score from internal/external referrer</description>
        <formula>IF(NOT(ISBLANK(FinServ__ReferredByUser__c)),FinServ__ReferredByUser__r.FinServ__ReferrerScore__c,IF(NOT(ISBLANK(FinServ__ReferredByContact__c)),FinServ__ReferredByContact__r.FinServ__ReferrerScore__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>RelatedLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funded_Volume__c</fullName>
        <label>Funded Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Value__c</fullName>
        <description>Provides numeric value for Lead_Score__c, which simulates Einstein predictive lead scoring for demos.</description>
        <label>Lead Score Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>IF(AND(Lead_Score_Value__c &lt;=100, Lead_Score_Value__c &gt;60), 
TEXT(Lead_Score_Value__c) &amp; &quot; &quot; &amp; IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.FileDownload?file=015Hr000004ZYwz&amp;oid=&quot;&amp;$Organization.Id, &quot;Green&quot;), 

IF(AND(Lead_Score_Value__c &lt;=60, Lead_Score_Value__c &gt; 30), 
TEXT(Lead_Score_Value__c)&amp; &quot; &quot; &amp; IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.FileDownload?file=015Hr000004ZYx0&amp;oid=&quot;&amp;$Organization.Id, &quot;Yellow&quot;), 

IF(Lead_Score_Value__c &lt;=30, 
TEXT(Lead_Score_Value__c)&amp; &quot; &quot; &amp; IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.FileDownload?file=015Hr000004ZYx1&amp;oid=&quot;&amp;$Organization.Id, &quot;Red&quot;), &quot;0&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Business_Name__c</fullName>
        <label>Mortgage Business Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_in_for_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt in for SMS Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_s__c</fullName>
        <label>Owner(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Percentage__c</fullName>
        <label>Ownership Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Budget_Amount__c</fullName>
        <label>Project Budget Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Brix_Record_Type__c</fullName>
        <label>Q Brix Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <description>Used by the Einstein Vision Demo updated Jan 2020.  Set the Shadow_Roof_Type__c field to the value you want to be predicted in this field.</description>
        <inlineHelpText>This field will change automatically when you click the “Analyze Roof Type” button.</inlineHelpText>
        <label>Roof Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Pitched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Experience_Approval_Status__c</fullName>
        <description>Used to track approval status for leads in sales process and partner registration processes</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_PRM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_PRM_Service_Delivery__c</fullName>
        <description>Used in deal registration process to denote which type of service delivery it is</description>
        <label>Service Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>IT Solutions</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>